# LEngine

./: .gitignore  CMakeLists.txt  Makefile  README.md  config.lua  init.lua  toolchain-mingw.cmake
.github/workflows/: qodana_code_quality.yml
cli/: Makefile  le-cli  main.zig
cli/lib/: zlua.zig
docs/: docusaurus.config.js  package-lock.json  package.json
docs/docs/: intro.md
docs/docs/tutorial-basics/: congratulations.md  create-a-config.md  create-a-game.md  use-function.md  use-variables.md
docs/src/components/HomepageFeatures/: index.js
docs/src/pages/: index.js
engine/api/: CMakeLists.txt
engine/api/src/: main.cpp
include/: game.h  logger.h  luafunctions.h
lua/src/: lua  luac
src/: game.cpp  logger.cpp  luafunctions.cpp  main.cpp
